Fix issue with the the positioning of left aligned checkboxes
close #69

--- a/sites/all/themes/habitat/sass/_forms.scss
+++ b/sites/all/themes/habitat/sass/_forms.scss
@@ -347,6 +347,7 @@ form.webform-client-form
             label
             {
                 padding:0 0 0 30px;
+                display: block;
 
                 &:after
                 {
